--- a/package.json
+++ b/package.json
@@ -16,10 +16,14 @@
   "dependencies": {
     "@inquirer/prompts": "^3.2.0",
     "@inquirer/select": "^1.3.0",
+    "adm-zip": "^0.5.10",
+    "archiver": "^6.0.1",
+    "chalk": "4.1.2",
     "cli-progress": "^3.12.0",
     "discord.js": "^14.13.0",
     "docx": "^8.2.3",
     "langchain": "^0.0.165",
+    "officeparser": "^4.0.6",
     "p-queue": "^7.4.1",
     "puppeteer": "^21.3.8",
     "puppeteer-extra": "^3.3.6",
